Added trackbacks and pingbacks to comments

--- a/style.css
+++ b/style.css
@@ -614,6 +614,15 @@ a:hover {
 	border-bottom: none;
 }
 
+/* Configuro los trackbacks/pingbacks para que no muestren el texto del enlace */
+.pingback .comment-text h4:before {
+	content: "Pingback: ";
+	display: block;
+} 
+.pingback .comment-text p {
+	display: none;
+} 
+
 /* Formato especial para botones */
 .btn-koalite, 
 .btn-koalite:hover { 
