--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ blockquote.pull-left{
 	}
 	
 	.container-fluid{
-		max-width: 970px;
+		max-width: 1170px;
 		margin: 0 auto;
 		padding-left: 20px;
 		padding-right: 20px;
@@ -549,8 +549,8 @@ code {
     border: medium none;
     color: #333333;
     display: inline;
-    font-family: Consolas, Lucida Console, Courier New ;
-    font-size: 14px;
+    font-family: Monaco, Consolas, Lucida Console, Courier New ;
+    font-size: 15px;
     background: none;
     padding: 0;
     margin: 0;
@@ -576,7 +576,7 @@ body, h1, h2, h3, h4, h5, h6, p, li {
 
 p, li {
  line-height: 140%;
- font-size: 14px;
+ font-size: 16px;
 }
 
 .aligncenter {
