--- a/style.css
+++ b/style.css
@@ -610,8 +610,9 @@ pre {
 }
 
 section.post_content h3 {
-	margin-top: 15px;
-	margin-bottom: 10px;
+	font-size: 20px;
+	margin-top: 16px;
+	margin-bottom: 24px;
 }
 
 a {
