--- a/style.css
+++ b/style.css
@@ -665,23 +665,24 @@ a.no-border, a:hover.no-border {
 	background: top left no-repeat url(img/logo.png);
 	border-bottom: 1px solid #ddd;
 	padding-bottom: 15px;
-	margin-top: 35px;
+	margin-top: 15px;
 }
 
 .blog-header h1 {
-	font-size: 64px;
+	font-size: 36px;
 	color: #404040;
-	text-shadow: 3px 3px 2px rgba(0,0,0,0.2);
+	font-weight: 100;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 	margin-top: 4px;
 	margin-left: 190px;
 }
 
 .blog-header .tagline {
 	margin-top: 12px;
-	font-size: 20px;
+	font-size: 28px;
 	color: #888;
-	font-weight: 500;
-	margin-left: 190px;
+	margin-left: 5px;
+	text-shadow: none;
 }
 
 /* Formato de la página con archivo de posts */
