--- a/style.css
+++ b/style.css
@@ -599,6 +599,13 @@ section.post_content h3 {
 	margin-bottom: 10px;
 }
 
+section.post_content h4 {
+	font-size: 16px;
+	margin-top: 15px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+
 a {
 	color: #a02;
 	text-decoration: none;
